* Pár javítás elvégezve. Mostantól nem lehet maximalizálni az ablakot.

--- a/Nagy Házi/Verseny/Dev/ClassModules/Map.cls
+++ b/Nagy Házi/Verseny/Dev/ClassModules/Map.cls
@@ -139,7 +139,7 @@ Public Sub DeleteDefaultMap()
     MapPath = MapDir & "/" & AGlobalis_PalyaNeve
 
     If FileExists(MapPath) Then
-        Kill ConfigPath
+        Kill MapPath
     End If
 End Sub
 
