--- a/Nagy Házi/Verseny/Dev/ClassModules/Config.cls
+++ b/Nagy Házi/Verseny/Dev/ClassModules/Config.cls
@@ -11,6 +11,10 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
+' Fejléc
+' Készítette: Molnár Péter
+' Fejléc vége
+
 Option Explicit
 
 ' Konfig mappa nevét tárolja.
